@@ -150,7 +150,7 @@ void Flyer::TimeTick(Double_t t, Double_t dt)
     }
 
     // Testing printout.
-    if (bSelected)
+    if (bSelected && G_DEBUG > 0)
     {
       mGrav.Print();
       printf("  v_mag=%f, vl=%f, vt=%f, t_safe=%f, d_safe=%f (d/v)=%f\n",
